# crm_music_school

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0083c973c01a_add_exams_commission_exam_sessions_exam_.py  1c8142443038_add_disciplines_table_with_seed.py  2275febe9320_remove_event_date_from_events.py  24f4975a1400_add_events_table.py  2771587cdcb6_add_instruments_table.py  2a38f7e826f9_add_branch_admin_and_accountant_roles.py  2c8925fdf57c_add_user_id_to_leads_student_login.py  3792c897e1d8_add_subscription_plans_table.py  469b4d07f5b3_branches_and_branch_id_fks.py  469bd6c90af3_leads_discipline_enum_to_fk.py  50daeb87c09b_add_employees_table_with_fk_to_roles.py  51e96fbc6e95_move_date_from_sessions_to_schedule.py  5aa988a72a52_add_leads_table_with_enums.py  5b4885022fda_add_sessions_table.py  5f51e1608e5e_initial_roles_table.py  6877c50422a2_add_students_table_with_fk_to_users_and_.py  (+17 more)
backend/app/: initial_data.py  main.py
crm-music-school/: main.py  pyproject.toml
docker/: backend-entrypoint.sh  backend.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: dev-log.md
frontend/: app.js  confirm-payments.html  convert.html  convert.js  employee-new.html  employee-new.js  index.html  lead-new.html  login.html  login.js  payment-new.html  payment-new.js  plans.html  plans.js  student-finance.html  student-finance.js  styles.css  subscription-new.html  subscription-new.js  users.html  users.js
frontend/shared/: auth.js  labels.js  nav.js
(+156 files in other folders)
